@@ -1,3 +1,8 @@
+BUG: ReadData should not be run for links with no nodes (templates) or nodes with no position.
+
+quotes, and escaped quotes
+"([^\"\\]*(?:\\.[^\"\\]*)*)" | (\S+)\s | \s
+
 
 # Average over an arbitrary period...
 rrdtool graph /dev/null -f "" -s now-30d -e now DEF:in=../rra/atm-sl_traffic_in_5498.rrd:traffic_in:AVERAGE DEF:out=../rra/atm-sl_traffic_in_5498.rrd:traffic_out:AVERAGE VDEF:avg_in=in,AVERAGE VDEF:avg_out=out,AVERAGE PRINT:avg_in:%lf PRINT:avg_out:%lf
@@ -19,7 +24,7 @@ Coverage/Usage stats
 DONE!  Per-map warning count in DB
 WUG DS
 Nagios DS
-RRD xport DS
+RRD xport DS (use rrdtool graph and PRINT in fact)
 Solarwinds Orion DS
 DONE!  Some SETs to suppress warnings?
 'none' for SCALE (not gradient)
