@@ -23,6 +23,7 @@ SCALE DEFAULT 70 85   255 192 0
 SCALE DEFAULT 85 100   255 0 0  
 
 SET rrd_use_poller_output 1
+SET rrd_default_path {map:cacti_path_rra}
 
 # End of global section
 
@@ -58,7 +59,7 @@ NODE node00342
 
 NODE node00352
 	LABEL Node--{node:this:bandwidth_in}--
-	TARGET /usr/local/share/cacti/rra/localhost_traffic_in_55.rrd:traffic_in:-
+	TARGET localhost_traffic_in_55.rrd:traffic_in:-
 	POSITION 393 25
 
 NODE node00364
@@ -106,8 +107,8 @@ LINK test1
 LINK test2
 	BWSTYLE angled
 	BANDWIDTH 2M
-	INFOURL {map:cacti_url}/graph.php?rra_id=all&local_graph_id={link:this:cacti_graph_id}
-	OVERLIBGRAPH {map:cacti_url}/cacti/graph_image.php?rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300&local_graph_id={link:this:cacti_graph_id}
+	INFOURL {map:cacti_url}graph.php?rra_id=all&local_graph_id={link:this:cacti_graph_id}
+	OVERLIBGRAPH {map:cacti_url}graph_image.php?rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300&local_graph_id={link:this:cacti_graph_id}
 	TARGET {map:cacti_path_rra}/localhost_traffic_in_55.rrd
 	OUTCOMMENT {link:this:cacti_ifDescr} {link:this:max_bandwidth_in:%k}
 	NODES node00364 node00352
