@@ -291,6 +291,7 @@ LINK sdf
 LINK t1uplink
 	TEMPLATE 100meg
 	NODES t1 sub2
+	TARGET 1*static:10M:10M -3*static:1M:1M 2.0*static:3M:3M -static:3M:3M
 
 LINK t2uplink
 	WIDTH 3
