@@ -464,13 +464,13 @@ function weathermap_poller_output ($rrd_update_array) {
 	
 	// $requiredlist = db_fetch_assoc("select distinct weathermap_data.*, data_template_data.local_data_id, data_template_rrd.data_source_type_id from weathermap_data, data_template_data, data_template_rrd where weathermap_data.rrdfile=data_template_data.data_source_path and data_template_rrd.local_data_id=data_template_data.local_data_id");
 	// new version works with *either* a local_data_id or rrdfile in the weathermap_data table, and returns BOTH
-	$requiredlist = db_fetch_assoc("select distinct weathermap_data.id, data_template_data.data_source_path, data_template_data.local_data_id, data_template_rrd.data_source_type_id from weathermap_data, data_template_data, data_template_rrd where ((weathermap_data.rrdfile=data_template_data.data_source_path and weathermap_data.rrdfile <> '') or (weathermap_data.local_data_id=data_template_data.local_data_id and weathermap_data.local_data_id>0)) and data_template_rrd.local_data_id=data_template_data.local_data_id;");
+	$requiredlist = db_fetch_assoc("select distinct weathermap_data.id, weathermap_data.last_value, weathermap_data.last_time, weathermap_data.data_source_name, data_template_data.data_source_path, data_template_data.local_data_id, data_template_rrd.data_source_type_id from weathermap_data, data_template_data, data_template_rrd where ((weathermap_data.rrdfile=data_template_data.data_source_path and weathermap_data.rrdfile <> '') or (weathermap_data.local_data_id=data_template_data.local_data_id and weathermap_data.local_data_id>0)) and data_template_rrd.local_data_id=data_template_data.local_data_id;");
 	
 	$path_rra = $config['base_path'].'/rra';
 	
 	foreach ($requiredlist as $required)
 	{
-		$file = str_replace("<path_rra>", $path_rra, $required['rrdfile']);
+		$file = str_replace("<path_rra>", $path_rra, $required['data_source_path']);
 		$dsname = $required['data_source_name'];
 		
 		if( isset( $rrd_update_array{$file}['times'][key($rrd_update_array[$file]['times'])]{$dsname} ) )
